# -omniflow-

./: README.md  VIDEO_SCRIPT.md  app_patch.py  config_example.py  pyproject.toml
src/: __init__.py  config.py
src/ingestion/: __init__.py  api_source.py  base.py  file_source.py
src/models/: __init__.py  document.py  metrics.py  pipeline.py
src/monitoring/: __init__.py  audit.py  metrics_collector.py
src/omniflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/processing/: __init__.py  base.py  enricher.py  router.py  transformer.py  validator.py
src/storage/: __init__.py  base.py  console.py  database.py  file_storage.py
src/utils/: __init__.py  errors.py  pipeline_loader.py  retry.py  serialization.py
tests/test_ingestion/: test_ingestion.py
tests/test_pipeline/: test_full_pipeline.py  test_pipeline_loader.py
tests/test_processing/: test_errors.py  test_helpers.py  test_metrics.py  test_processing.py  test_serialization.py
tests/test_storage/: test_storage.py
